--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 
   <body>
     <!-- the entire body must be written by student -->
-    <button id="btn">Fetch Data</button>
+    <button id="btn" onclick="fatchData(displayMassage)">Fetch Data</button>
     <div id="output"></div>
 
 
